CHG: move User request and response to the API
