# app/interfaces/api.go
@@ -10,6 +10,17 @@ import (
 	"strconv"
 )
 
+type UserRequest struct {
+	Name string `json:"name"`
+	Age  int    `json:"age"`
+}
+
+type UserResponse struct {
+	ID   int    `json:"id"`
+	Name string `json:"name"`
+	Age  int    `json:"age"`
+}
+
 type GinController struct {
 	Interactor use_cases.UserInteractor
 }
@@ -46,7 +57,7 @@ func (g *GinController) handler(context *gin.Context) {
 // @Tags users
 // @Accept json
 // @Produce json
-// @Success 200 {array} use_cases.UserResponse
+// @Success 200 {array} UserResponse
 // @Router /users [get]
 func (g *GinController) GetUsers(context *gin.Context) {
 	users := g.Interactor.GetUsers()
@@ -61,7 +72,7 @@ func (g *GinController) GetUsers(context *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param id path int true "User ID"
-// @Success 200 {object} use_cases.UserResponse
+// @Success 200 {object} UserResponse
 // @Failure 404
 // @Failure 500
 // @Router /users/{id} [get]
@@ -89,8 +100,8 @@ func (g *GinController) GetUser(context *gin.Context) {
 // @Tags users
 // @Accept json
 // @Produce json
-// @Param request body use_cases.UserRequest true "User data"
-// @Success 201 {object} use_cases.UserResponse
+// @Param request body UserRequest true "User data"
+// @Success 201 {object} UserResponse
 // @Failure 400
 // @Failure 500
 // @Router /users [post]
@@ -148,8 +159,8 @@ func (g *GinController) DeleteUser(context *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param id path int true "User ID"
-// @Param request body use_cases.UserRequest true "User data"
-// @Success 200 {object} use_cases.UserResponse
+// @Param request body UserRequest true "User data"
+// @Success 200 {object} UserResponse
 // @Failure 400
 // @Failure 500
 // @Router /users/{id} [patch]
